[package]
name = "sel4_common"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4.21"
aarch64-cpu = "9.4.0"
cfg-if = "1.0"
spin = { version = "0.9", features = ["use_ticket_mutex"] }
driver-collect = { git = "https://github.com/reL4team2/driver-collect.git", branch = "master"}

[build-dependencies]
rust_sel4_pbf_parser= { git = "https://github.com/reL4team2/rust_sel4_pbf_parser/", branch = "master" }
rel4_config = { path = "../rel4_config" }

[features]
enable_smp = []
kernel_mcs = []
enable_smc = []
build_binary = []
have_fpu = []
riscv_ext_d = []
riscv_ext_f = []