[package]
name = "sel4_common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
cfg-if = "1.0"
spin = { version = "0.9", features = ["use_ticket_mutex"] }
rel4-arch = { path = "../rel4-arch" }
rel4-utils = { workspace = true }

# Serial Driver
serial-frame = { git = "https://github.com/reL4team2/serial-frame.git", branch = "master" }
serial-impl-pl011 = { git = "https://github.com/reL4team2/serial-impl-pl011.git", branch = "master" }
serial-impl-sbi = { git = "https://github.com/reL4team2/serial-impl-sbi.git", branch = "master" }

[build-dependencies]
rust_sel4_pbf_parser = { git = "https://github.com/reL4team2/rust_sel4_pbf_parser/", branch = "master" }
rel4_config = { path = "../rel4_config" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { workspace = true }

[features]
enable_smp = ["rel4-arch/smp"]
kernel_mcs = []
enable_smc = ["rel4-arch/smc"]
build_binary = []
have_fpu = ["rel4-arch/fpu"]
hypervisor = ["rel4-arch/hypervisor"]
riscv_ext_d = []
riscv_ext_f = []
